css/styles.css
@font-face {
    font-family: 'ChantelliAntiqua';
    src: url('../assets/fonts/ChantelliAntiqua.woff2') format('woff2'),
        url('../assets/fonts/ChantelliAntiqua.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

:root {
  --color-main-hsl: hsl(220, 16%, 22%);
  --color-main-hsl-h: 220;
  --color-main-hsl-s: 16%;
  --color-main-hsl-l: 22%;

  --color-secondary-hsl: hsl(220, 16%, 36%);
  --color-secondary-hsl-h: 220;
  --color-secondary-hsl-s: 16%;
  --color-secondary-hsl-l: 36%;

  --color-text-main-hsl: hsl(218, 27%, 94%);
  --color-text-main-hsl-h: 218;
  --color-text-main-hsl-s: 27%;
  --color-text-main-hsl-l: 94%;

  --color-text-dark-hsl: hsl(193, 100%, 5%);
  --color-text-dark-hsl-h: 193;
  --color-text-dark-hsl-s: 100%;
  --color-text-dark-hsl-l: 5%;

  --color-accent-hsl: hsl(193, 43%, 67%);
  --color-accent-hsl-h: 193;
  --color-accent-hsl-s: 43%;
  --color-accent-hsl-l: 67%;

  --color-complement-hsl: hsl(219, 28%, 88%);
  --color-complement-hsl-h: 219;
  --color-complement-hsl-s: 28%;
  --color-complement-hsl-l: 88%;

  --icon-svg-add-book: url(../assets/icons/add-book.svg);
  --icon-svg-edit-book: url(../assets/icons/edit-book.svg);
  --icon-svg-delete-book: url(../assets/icons/delete-book.svg);

  --font-logotype: 'ChantelliAntiqua', serif;

  --font-size-text-tiny: calc(0.9rem + 0.1vh);
  --font-size-text-normal: calc(1rem + 0.1vh);
  --font-size-text-big: calc(2rem + 0.1vh);

  --font-size-title-normal: calc(1.2rem + 0.1vh);
  
  --button-height-big: calc(var(--font-size-text-big) + 1rem);
}

.body-wrapper {
  --header-height: min-content;

  height: 100vh;

  display: grid;
  grid-template: 
    "header" var(--header-height)
    "body  " auto;
}

.library {
  background-color: var(--color-secondary-hsl);
}

.header {
  background-color: var(--color-main-hsl);

  padding: 1rem;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__my-library-logotype {
  font-family: var(--font-logotype);
  font-size: var(--font-size-text-big);
  color: var(--color-text-main-hsl);
}

.my-library-github-link {
  aspect-ratio: 1 / 1;
  height: var(--font-size-text-big);

  background-image: url(../assets/icons/github.svg);
  background-size: contain;
  background-repeat: no-repeat;
}

.library__controls-container {
  padding: 0.5rem;

  display: flex;
  justify-content: center;
  gap: 0.5rem;
  flex-wrap: wrap;
  --button-width-min: 10ch;
  --button-width-max: 25ch;
}

/* Size control buttons */

.library__add-book-button,
.library__edit-book-button,
.library__delete-book-button {
  min-width: var(--button-width-min);
  max-width: var(--button-width-max);
  height: var(--button-height-big);
  flex: 1 1 auto;

  border-radius: 0.2rem;
}

/* Set button's colors */

.library__add-book-button {
  border: outset hsl(91.3, 70.41%, 44%) 3px;
  background-color: rgb(95 167 29);
}
.library__edit-book-button {
  border: outset hsl(41.4, 69.23%, 60%) 3px;
  background-color: rgb(209 156 38);
}
.library__delete-book-button {
  border: outset hsl(0, 76.17%, 63%) 3px;
  background-color: rgb(227 48 48);
}

/* Add icons to the control buttons */

.library__add-book-button {background-image: var(--icon-svg-add-book)}
.library__edit-book-button {background-image: var(--icon-svg-edit-book)}
.library__delete-book-button {background-image: var(--icon-svg-delete-book)}

.library__add-book-button,
.library__edit-book-button,
.library__delete-book-button {
  background-size: var(--font-size-text-big);
  background-repeat: no-repeat;
  background-position: 50%;
}

/* Change cursor to pointer when hovering on control buttons */

.library__add-book-button:hover,
.library__edit-book-button:hover,
.library__delete-book-button:hover {cursor: pointer}

/* Set button's color on hover */

.library__add-book-button:hover {background-color: hsl(91.3, 70.41%, 37%);}
.library__edit-book-button:hover {background-color: hsl(41.4, 69.23%, 47%);}
.library__delete-book-button:hover {background-color: hsl(0, 76.17%, 50%);}

/* Make buttons look pressed on press */

.library__add-book-button:active,
.library__edit-book-button:active,
.library__delete-book-button:active {
  border-style: inset;
}

/* Books */

.book {
  --book-cover-size: cover;
  --book-cover-aspect-ratio: 1 / 1.5;
  --book-title-height: min-content;
  --book-summary-height: calc(7rem + 1vh);
  --book-pages-height: min-content;
  --book-gap-size: 1.5vh;

  display: inline-grid;
  grid-template: 
    "cover title" var(--book-title-height)
    "cover summary" var(--book-summary-height)
    "cover pages" var(--book-pages-height) / min-content minmax(min-content, calc(40rex + 2vw));
  padding: var(--book-gap-size);
  gap: var(--book-gap-size);

  border-radius: 0.25rem;

  background-color: #F1EDE3;

  color: var(--color-text-dark-hsl);
}

.book__cover {
  grid-area: cover;

  aspect-ratio: var(--book-cover-aspect-ratio);

  background-color: hsl(0, 0%, 100%);
}

.book__title-wrapper {
  grid-area: title;

  display: flex;
  flex-wrap: wrap;
  gap: 1rex;
  align-items: baseline;
}

.book__title,
.book__author {
  display: inline;
}

.book__title {
  margin: 0;

  font-size: var(--font-size-title-normal);
}

.book__author {
  font-size: var(--font-size-text-tiny);
}

.book__summary {
  grid-area: summary;

  height: var(--book-summary-height);

  margin: 0;

  font-size: var(--font-size-text-normal);
  line-height: 1.5;

  overflow: hidden;
}

.book__pages {
  grid-area: pages; 

  height: var(--book-pages-height);

  display: flex;
  justify-content: space-between;

  font-size: var(--font-size-text-tiny);
}

.book__read-status-read,
.book__read-status-reading,
.book__read-status-not-read,
.book__read-status-error {
  --color-status-read: rgb(102, 255, 0);
  --color-status-reading: rgb(0, 179, 255);
  --color-status-not-read: rgb(129, 129, 129);
  --color-status-error: rgb(255, 0, 0);

  display: grid;
  grid-template-columns: min-content max-content;
  gap: 0.5rex;
}

.book__read-status-read::before,
.book__read-status-reading::before,
.book__read-status-not-read::before,
.book__read-status-error::before {
  content: "";

  place-self: center center;

  display: inline-block;
  height: 70%;
  aspect-ratio: 1 / 1;
  border-radius: 50%;
  background-color: var(--color-status-read);
}

.book__read-status-read::before {background-color: var(--color-status-read)}
.book__read-status-reading::before {background-color: var(--color-status-reading)}
.book__read-status-not-read::before {background-color: var(--color-status-not-read)}
.book__read-status-error::before {background-color: var(--color-status-error)}

